# its_thorn

./: README.md  pyproject.toml
its_thorn/: cli.py  postprocessing.py  utils.py
its_thorn/strategies/: embedding_shift.py  sentiment.py  trigger_output.py
itsthorn/: __init__.py  cli.py  poison.py  postprocessing.py  strategies.py  utils.py
itsthorn/strategies/: embedding_shift.py  sentiment.py  strategy.py  trigger_output.py
test/: test_cli.py  test_datasets.py
tests/: test_itsthorn.py
