[tool.poetry]
name = "itsthorn"
version = "0.1.0"
description = "A library for stealthy poisoning of datasets for instruction-tuned LLMs"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "itsthorn"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.21.0"
typer = "^0.12.0"
transformers = "^4.44.0"
torch = "^2.4.0"
inquirer = "^3.4.0"
nltk = "^3.9.1"

rich = "^13.7.1"
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
itsthorn = "itsthorn.cli:app"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]